<resources>
    <string name="app_name">in-Eventation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">349296105565955</string>
    <string name="facebook_login_protocol_scheme">fb349296105565955</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="fb_login_button_name">LOGIN WITH FACEBOOK</string>
    <string name="action_sign_in">Log in to Account</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="submit">SUBMIT</string>


    <string name="appNname">Register For Events</string>

    <string name="twitterUsername">\@joeytribbiani</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
