<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#4FC3F7"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.co.appyfest.LoginParticipantActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loginParticipant_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/login_Participant_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_Participant_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/participant_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/halfWhite"
                    android:textColorLink="@color/colorAccent"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light">

                <EditText
                    android:id="@+id/participant_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/background_light"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/halfWhite"
                    android:textColorLink="@color/colorAccent"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/participant_email_sign_in_button"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:id="@+id/forgotPassword"
                    android:textStyle="bold"
                    android:text="FORGOT PASSWORD?"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="REGISTER HERE"
                    android:onClick=""
                    android:id="@+id/participant_createAccount"
                    />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/login_participant_Button"
                android:text="@string/fb_login_button_name"
                android:textColor="@color/white"
                android:background="@color/com_facebook_button_background_color"
                />



            <com.google.android.gms.common.SignInButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/participant_googleButton"
                android:layout_marginTop="16dp"
                >


            </com.google.android.gms.common.SignInButton>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
